add swagger for system
